--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,14 @@ jobs:
             cd /var/www/turan/news/api
 
             # Pull latest code
-            git fetch --all
-            git reset --hard origin/master
-            git clean -fd
+            # If repo not cloned yet, clone it
+            if [ ! -d ".git" ]; then
+              git clone git@github.com:okhsat/news-api.git .
+            else
+              git fetch --all
+              git reset --hard origin/master
+              git clean -fd
+            fi
 
             # Always overwrite .env from .env.example
             cp .env.example .env
@@ -52,15 +57,20 @@ jobs:
             sed -i 's|#NEWSAPI_KEY=.*|NEWSAPI_KEY=${{ secrets.NEWSAPI_KEY }}|' .env
             sed -i 's|#GUARDIAN_KEY=.*|GUARDIAN_KEY=${{ secrets.GUARDIAN_KEY }}|' .env
 
-            # Generate APP_KEY
-            php artisan key:generate --force
+            # Use APP_KEY if exists, generate otherwise
+            if ! grep -q 'APP_KEY=' .env || [ -z "$(grep APP_KEY .env | cut -d '=' -f2)" ]; then
+              php artisan key:generate --force
+            fi
 
             # Install dependencies and optimize
-            composer install --no-interaction --prefer-dist --optimize-autoloader
+            composer install --no-interaction --prefer-dist --optimize-autoloader --no-dev
             php artisan migrate --force
             php artisan config:cache
             php artisan route:cache
             php artisan view:cache
+
+            # Ensure required folders exist
+            mkdir -p storage bootstrap/cache
 
             # Fix permissions
             chown -R www-data:www-data storage bootstrap/cache
