.github/workflows/deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
 
             # Create .env
             cat > .env <<EOL
-            APP_NAME=News Aggregator API
+            APP_NAME="News Aggregator API"
             APP_ENV=production
             APP_KEY=${{ secrets.APP_KEY }}
             APP_DEBUG=false
