--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,13 +61,9 @@ jobs:
             GUARDIAN_KEY=${{ secrets.GUARDIAN_KEY }}
             EOL
 
-            # Install dependencies and optimize
+            # Install dependencies
             composer install --no-interaction --prefer-dist --optimize-autoloader --no-dev
-            php artisan migrate --force
-            php artisan config:cache
-            php artisan route:cache
-            php artisan view:cache
-
+            
             # Ensure required folders exist
             mkdir -p storage bootstrap/cache
 
@@ -76,4 +72,18 @@ jobs:
             sudo chmod -R 775 storage bootstrap/cache
 
             # Restart PHP-FPM
-            sudo systemctl restart php8.4-fpm
+            sudo systemctl restart php8.4-fpm            
+
+            # Run database migrations
+            php artisan migrate --force
+
+            # Seed database (optional: only if fresh deploy or sources missing)
+            php artisan db:seed --class=SourcesTableSeeder --force
+
+            # Load news to test
+            php artisan news:test
+
+            # Optimize
+            php artisan config:cache
+            php artisan route:cache
+            php artisan view:cache
