--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,3 +87,7 @@ jobs:
             php artisan config:cache
             php artisan route:cache
             php artisan view:cache
+
+            # Build front-end assets
+            npm install
+            npm run build
